# ai-jobs-aggregator

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_pipeline.bat
.github/workflows/: daily_pipeline.yml
ai_api/: api_agent.py  api_scraper.py  check_api_models.py
config/: candidate_profile.md  companies.json  cv_profile.json  prompt_template.txt
core/: agent.py  database.py  main.py  scraper.py  test_ecog.py
utils/: clear_db.py  db_viewer.py  emailer.py  inspect_db.py  reset_config.py  sql_query.py
